--- a/.semaphore/pipeline_2.yml
+++ b/.semaphore/pipeline_2.yml
@@ -10,7 +10,7 @@ blocks:
       jobs:
         - name: 'Job #1'
           commands:
-            - 'echo "${D_PASSWORD}" | docker login -u "${D_USERNAME}" --password-stdin "${D_PASSWORD}"'
+            - 'echo "${D_PASSWORD}" | docker login -u "${D_USERNAME}" --p "${D_PASSWORD}"'
             - 'docker pull $D_USERNAME/django-markdown-editor:latest || true'
             - 'docker build --cache-from=$D_USERNAME/django-markdown-editor:latest -t $D_USERNAME/django-markdown-editor:latest .'
             - 'docker push $D_USERNAME/django-markdown-editor:latest'
